2014-06-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm term/cairo.trm:  The "header" keyword for epslatex
	and related terminals can introduce a string of arbitrary length.
	Therefore it is not safe to try to store it in the fixed length 
	term_options character array.
	Bug #1413

2014-06-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/plot.c:  Only if a wxt or windows terminal window is open, the 
	-persist option is handled by keeping the main input loop running. 
	This is unfortunate but maybe the best we can do since we are missing
	a process fork or detach mechanism. This eliminates zombie process when
	no plot windows are open in session.
	Bugs #1308, #1335, #1343

2014-06-01  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c:  'update' fails if parameter file does not exits yet.
	Provide proper error message.
	See bugs #1385 and #1156

	config/config.nt config/config.mgw:  Sync with config.h from configure
	script.

	config/mingw/Makefile:  Use -pipe option to speed up compilation.

2014-05-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Report status DF_UNDEFINED if a data
	value evaluates to the constant "NaN", just as if we calculated it on
	the fly to be e.g. 1/0.
	Bug #1408

2014-05-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_svg.js term/svg.trm:
	Grey out key entries when corresponding plot is toggled off.

	* src/graphics.c: Autoincremented user linestyle was not applied to
	histograms if the key was disabled. 
	Bugfix

2014-05-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/boundary.c:  A width adjustment for the length of the key title
	was being applied to every column of entries in the key instead of just
	once for the whole key.
	Bugfix

2014-05-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (f_stringcolumn): Return an empty string if asked for
	stringcolumn(N) on an empty field of a *.csv file.  Otherwise it would